wavenc: A-Law and Mu-Law don't have width/depth/signed caps fields

https://bugzilla.gnome.org/show_bug.cgi?id=709614